# hackmd-mcp-proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  GOAL_PROGRESS.md  README.md  SPEC.md  docker-compose.traefik.yml  docker-compose.yml
apps/server/: Cargo.toml
apps/server/src/: config.rs  lib.rs  main.rs  state.rs
apps/server/src/hackmd/: proxy.rs
apps/server/src/oauth/: clients.rs  metadata.rs  mod.rs  pkce.rs  scopes.rs  store.rs  tokens.rs
apps/server/src/observability/: mod.rs
apps/server/src/routes/: health.rs  mcp.rs  mod.rs  oauth.rs
apps/server/tests/: mcp_proxy.rs  oauth_flow.rs
src/: config.rs  crypto.rs  github.rs  hackmd.rs  lib.rs  main.rs  oauth.rs  observability.rs  patch.rs  routes.rs  state.rs  store.rs
src/hackmd/: auth.rs  client.rs  error.rs  mod.rs  models.rs  paths.rs  protocol.rs  schema.rs
src/http/: error.rs  mod.rs  pages.rs  session.rs
src/store/: clients.rs  credentials.rs  mod.rs  schema.rs  sessions.rs  tokens.rs  users.rs
tests/: github_oauth_proxy.rs
